// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main page behavior test Main page with offer renders correctly 1`] = `
<div
  className="page page--gray page--main"
>
  <PageHeader />
  <PlacesPage />
</div>
`;

exports[`Main page behavior test Main page without offer renders correctly 1`] = `
<div
  className="page page--gray page--main"
>
  <PageHeader />
  <PlacesPageEmpty />
</div>
`;
